# fasion_homework

./: CMakeLists.txt  README.md
average/: mapper.cpp
build_dc/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt
cmake/: FindCatBoost.cmake
